# lobby_analysis

./: .gitignore  CLAUDE.md  COLLABORATOR_PROJECT_INSTRUCTIONS.md  PAPER_INDEX.md  PAPER_SUMMARIES.md  README.md  STATUS.md  docs.md  pyproject.toml
COGEL_BlueBook_1990/: mdp-39015077214750-159-1777853264.txt  mdp-39015077214750-160-1777853357.txt  mdp-39015077214750-161-1777853369.txt  mdp-39015077214750-162-1777853379.txt  mdp-39015077214750-163-1777853388.txt  mdp-39015077214750-164-1777853397.txt  mdp-39015077214750-166-1777853409.txt  mdp-39015077214750-167-1777853421.txt  mdp-39015077214750-168-1777853430.txt  mdp-39015077214750-169-1777853438.txt  mdp-39015077214750-170-1777853584.txt  mdp-39015077214750-171-1777853595.txt  mdp-39015077214750-172-1777853688.txt  mdp-39015077214750-173-1777853695.txt  mdp-39015077214750-174-1777853722.txt  mdp-39015077214750-175-1777853731.txt  mdp-39015077214750-176-1777853744.txt  mdp-39015077214750-177-1777853801.txt  mdp-39015077214750-178-1777853814.txt
compendium/: NAMING_CONVENTIONS.md  README.md  disclosure_items.csv  disclosure_side_compendium_items_v2.tsv
docs/: COMPENDIUM_AUDIT.md  LANDSCAPE.md  RESEARCH_ARC.md
notes/: claude_silent_deny_api_multi_vintage.md
papers/: CPI_2007__hired_guns_methodology.html  CPI_2015__sii_2015_landing.html  CPI_2015__sii_only_three_states.html  CPI_2015__sii_scores.csv  Lacy_Nichols_2025__lobbying_in_the_shadows__suppl_001.docx  Lacy_Nichols_2025__lobbying_in_the_shadows__suppl_002.docx  Sunlight_2015__state_lobbying_disclosure_scorecard_data.csv
scripts/: build_compendium.py  cogel_1990_extract.py  cogel_1990_grid.py  diagnose_v1_token_gaps.py  docs.md  fit_cpi_2015_c11_aggregation.py  inspect_scan169_ca_fl.py  opheim_1991_extract.py
skills/: docs.md
src/: docs.md
tests/: docs.md  test_api_retrieval_agent.py  test_api_retrieval_agent_b3.py  test_api_retrieval_agent_b4.py  test_bundle_statute.py  test_calibration.py  test_chunks_build.py  test_chunks_dataclass.py  test_chunks_init.py  test_chunks_manifest.py  test_cogel_grid.py  test_cogel_ocr_merge.py  test_cogel_opheim.py  test_compendium_loader.py  test_compendium_loader_v2.py  test_models.py  (+34 more)
(+608 files in other folders)
