[project]
name = "lobby-analysis-scoring"
version = "0.1.0"
description = "Unified PRI + FOCAL scoring pipeline for US state lobbying portal evaluation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scoring"]

[tool.hatch.build.targets.wheel.sources]
"src/scoring" = "scoring"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
