[project]
name = "lobby-analysis"
version = "0.1.0"
description = "US State Lobbying Data LLM Pipeline"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "playwright>=1.58.0",
    "pydantic>=2.8",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobby_analysis", "src/scoring"]

[tool.hatch.build.targets.wheel.sources]
"src/scoring" = "scoring"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_deprecated"]
